--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
+<!DOCTYPE html> <!-- 문서유형 -->
 <html>
-    <head>
+    <head> <!-- 머릿말 -->
         <title>강서영의 홈페이지</title>
+        <meta charset="utf-8" /> <!-- utf-8, euc-kr -->
+        <meta name="keywords" content="웹퍼블리싱, 계원, html, css" />
     </head>
-    <body>
-        안녕하세요 강서영의 홈페이지 입니다.
+    <body> <!-- 본문 -->
+        <a href="sub.html" target="_blank">서브페이지</a> <!-- 서브페이지 이동 -->
+        <a href="http://www.naver.com">네이버</a>
+        <a href="https://cafe.naver.com/kwdmd" target="_blank">계원디미디카페</a>
+
+
+        <img width="100px" height="auto"> <img src="https://i.pinimg.com/236x/aa/61/41/aa61411500e551e2e94cbf8a4c2a8171.jpg" />
+        <img width="100px" height="auto" src="C:\Users\addmin\Desktop\web_2023\image\sy.jpg" />
+
+        <a href="http://www.naver.com">네이버
+            <img width="100px" height="auto"> <img src="https://i.pinimg.com/236x/aa/61/41/aa61411500e551e2e94cbf8a4c2a8171.jpg" />
+        </a>
+        
+        <시작태그>
+        </종료태그>
+        <독립형태그 />
+        
+        <시작태그 속성="값">내용</종료태그>
+        <독립형태그 속성="값" />
     </body>
 </html>
+
