--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
         <img width="100px" height="auto"> <img src="https://i.pinimg.com/236x/aa/61/41/aa61411500e551e2e94cbf8a4c2a8171.jpg" />
-        <img width="100px" height="auto" src="C:\Users\addmin\Desktop\web_2023\image\sy.jpg" />
+        <img width="100px" height="auto" src="image\sy.jpg" />
 
         <a href="http://www.naver.com">네이버
             <img width="100px" height="auto"> <img src="https://i.pinimg.com/236x/aa/61/41/aa61411500e551e2e94cbf8a4c2a8171.jpg" />
